# fastcontext-agent-tools

./: .gitignore  .mcp.json  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
benchmarks/: EXPERIMENTS.md  README.md  _common.py  accuracy.py  cases.py  requirements.txt  token_usage.py  tokenizer.py
benchmarks/ab/: README.md  RESULTS.md  aggregate.py  arms.py  fastcontext.mcp.json  run_ab.py  score.py  test_aggregate.py  test_arms.py  test_score.py
benchmarks/maximkeep/: README.md  accuracy.py  cases.py
benchmarks/results/: accuracy.md  (+1 more)
commands/: fastcontext.md
docs/: EVALUATION.md  REPORT.md  fastcontext-vs-context-mode.md  field-observations-maximkeep-2026-06-28.md  mcp.ja.md  mcp.zh-TW.md  running-locally.md  running-on-ollama.md  running-on-pascal-p2000.md
evaluation/: fanicon-fcm-before-after.json  fanplan-fcm-before-after.json  local-before-after-results.json  local-official-benchmark-readiness.json  local-query-matrix-results.json  mice-checkin-before-after.json  official_benchmark_env.py  official_benchmark_harness.py  official_benchmark_images.py  official_benchmark_policy.py  official_benchmark_probes.py  official_benchmark_readiness.py  official_benchmark_tools.py  render_summary.py  run_wrapper_eval.py  token-benchmark-matrix-tasks.json  token-benchmark-tasks.json  token_benchmark.py  token_benchmark_matrix.py  wrapper-eval.json
scripts/: env.local.sh.example  env.sh  kickoff.sh  serve-model.sh
tests/: test_official_benchmark_readiness.py  test_server.py  test_token_benchmark.py
(+42 files in other folders)
