[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "fastcontext-agent-tools"
version = "0.2.1"
description = "MCP server and Codex skill for using Microsoft FastContext as a repository exploration subagent."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Jakevin" }
]
keywords = ["mcp", "fastcontext", "coding-agent", "repository-exploration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development"
]
dependencies = [
  "fastcontext @ https://github.com/microsoft/fastcontext/archive/1522d6d6b5e040e817b468e12826662aa069a8b0.tar.gz"
]

[project.scripts]
fastcontext-mcp = "fastcontext_mcp.server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[tool.hatch.build.targets.wheel]
packages = ["src/fastcontext_mcp"]

[tool.hatch.metadata]
allow-direct-references = true
